# bot-hd

./: .env.example  .gitignore  Cargo.toml  README.md
src/: handler.rs  main.rs
src/commands/: note.rs  ping.rs
src/events/: interaction_create.rs  message.rs  mod.rs  ready.rs
